# cbor-tools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: basic.yml
examples/: serde_experiments.rs
src/: display.rs  format.rs  lib.rs  test_util.rs  truncate.rs
tests/: decode.rs  encode.rs
