[package]
name = "cbor-tools"
version = "0.2.0"
description = "Tools for encoding and decoding CBOR"
authors = ["Eric Seppanen <eds@reric.net>"]
repository = "https://github.com/ericseppanen/cbor-tools"
license = "MIT"
readme = "README.md"
keywords = ["cbor"]
categories = ["encoding"]
edition = "2018"

[dependencies]
half = "1.6"

[dev-dependencies]
hex-literal = "0.3"
serde_cbor = "0.11.1"

[package.metadata.release]
no-dev-version = true
pre-release-commit-message = "release {{version}}"
