[package]
name = "cbor-tools"
version = "0.3.0"
description = "Tools for encoding and decoding CBOR"
authors = ["Eric Seppanen <eds@reric.net>"]
repository = "https://github.com/ericseppanen/cbor-tools"
license = "MIT"
readme = "README.md"
keywords = ["cbor"]
categories = ["encoding"]
edition = "2018"
rust-version = "1.46"

[features]
default=["display"]
display=[]

[dependencies]
half = "1.8.2"
num_enum = "0.5"
strum_macros = "0.23.1"
hex_fmt = "0.3"

[dev-dependencies]
hex-literal = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"

[package.metadata.release]
dev-version = false
pre-release-commit-message = "release {{version}}"
